--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <liquibase.version>4.28.0</liquibase.version>
         <preliquibase.version>1.5.0</preliquibase.version>
         <minio.version>8.5.10</minio.version>
+        <springdoc.version>2.5.0</springdoc.version>
         <jjwt.version>0.12.5</jjwt.version>
         <jakarta-validation.version>3.1.0</jakarta-validation.version>
         <postgresql.version>42.7.3</postgresql.version>
@@ -110,16 +111,20 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-
         <dependency>
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
             <version>${minio.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${springdoc.version}</version>
         </dependency>
 
         <!--        Auth-->
