--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
     networks:
       - app-network
     depends_on:
-      - db
+      - postgres
       - minio
       - redis
     env_file:
@@ -43,7 +43,7 @@ services:
     ports:
       - "8080:8080"
 
-  db:
+  postgres:
     image: "postgres"
     container_name: "postgres"
     networks:
@@ -52,9 +52,6 @@ services:
       POSTGRES_USER: "${POSTGRES_USERNAME}"
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
       POSTGRES_DB: "${POSTGRES_DATABASE}"
-#      PGDATA: "/var/lib/postgresql/data/db-data"
-    ports:
-      - "5432"
     volumes:
       - ./src/main/resources/preliquibase:/docker-entrypoint-initdb.d
       - db-data:/var/lib/postgresql/data
